--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1 style="text-align: center;">r/Field Art</h1>
 <p style="text-align: center;">Find art in the r/Field game!</p>
-<p>Shocked Lenny Face (2, 52)</p>
+<p><strong>Shocked Lenny Face </strong><em>(2, 52)</em></p>
 <p>Drawn by team <span style="color: #ffcc00;">Sunshine</span></p>
-<p>&nbsp;</p>
+<p><span style="color: #ffcc00;"><img src="https://r-field-art.vercel.app/img/lenny%20shock.png" alt="" width="206" height="120" /></span></p>
