--- a/index.html
+++ b/index.html
@@ -3,3 +3,9 @@
 <p><strong>Shocked Lenny Face </strong><em>(2, 52)</em></p>
 <p>Drawn by team <span style="color: #ffcc00;">Sunshine</span></p>
 <p><span style="color: #ffcc00;"><img src="https://r-field-art.vercel.app/img/lenny%20shock.png" alt="" width="206" height="120" /></span></p>
+<p><strong>YA! </strong><em>(1414, 3081)</em></p>
+<p>Drawn by team <span style="color: #ff99cc;">Flamingo</span></p>
+<p><span style="color: #ff99cc;"><img src="https://r-field-art.vercel.app/img/ya.png" alt="" width="195" height="116" /></span></p>
+<p><strong>A lot of text&nbsp;</strong><em>(1337, 3124)</em></p>
+<p>Drawn by all teams (mostly <span style="color: #ff99cc;">Flamingo</span>)</p>
+<p><img src="https://r-field-art.vercel.app/img/mouse.png" alt="" width="701" height="465" /></p>
