--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <h1 style="text-align: center;">r/Field Art</h1>
 <p style="text-align: center;">Find art in the r/Field game!</p>
 <p><strong>Shocked Lenny Face </strong><em>(2, 52)</em></p>
@@ -9,3 +13,7 @@
 <p><strong>A lot of text&nbsp;</strong><em>(1337, 3124)</em></p>
 <p>Drawn by all teams (mostly <span style="color: #ff99cc;">Flamingo</span>)</p>
 <p><img src="https://r-field-art.vercel.app/img/mouse.png" alt="" width="701" height="465" /></p>
+<p><strong>Ban = Good&nbsp;</strong><em>(101, 528)</em></p>
+<p>Drawn by team <span style="color: #ffcc00;">Sunshine&nbsp;</span>and&nbsp;<span style="color: #3366ff;">Juice Box</span></p>
+<p><span style="color: #3366ff;"><img src="https://r-field-art.vercel.app/img/ban = good.png" alt="" width="360" height="89" /></span></p>
+</body>
